# holmes-library

./: .gitignore  CMakeLists.txt  README.md  network_setup.sh  traffic_control.sh
bench/: bench_dataset_1.cpp  bench_dataset_1.hpp  bench_dataset_2.cpp  bench_dataset_2.hpp  bench_dataset_3.cpp  bench_dataset_3.hpp  bench_histogram_nominal.cpp  bench_histogram_numeric.cpp  bench_jl.cpp  bench_mean_check.cpp  bench_range_check.cpp  bench_strawman_jl.cpp  bench_test.cpp  bench_trimmed_mean.cpp  bench_variance_check.cpp  histogram_nominal_check.hpp  histogram_numeric_check.hpp  host_ip.hpp  jl_projector.hpp  mean_check.hpp  random_linear_combination.hpp  range_check.hpp  test_check.hpp  trimmed_mean.hpp  variance_check.hpp
bench-scripts/: bench_dataset1.py  bench_dataset2.py  bench_dataset3.py  bench_histogram_nominal.py  bench_histogram_numeric.py  bench_jl_big.py  bench_jl_varying_num_dim.py  bench_jl_varying_size_dim.py  bench_mean_check.py  bench_range_check.py  bench_strawman_jl_varying_num_dim.py  bench_strawman_jl_varying_size_dim.py  bench_test.py  bench_trimmed_mean.py  bench_variance_check.py  common.py
